[feat] KakaoMap API 컴포넌트 등록

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css"
     />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=17c99c2bc41ab7ef8d9dd8cc88424a1c"
+    ></script>
     <title>봐주개냥</title>
   </head>
   <body>
