[Feat] PlaceDetail 리뷰, 스와이퍼 제외 구현

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     />
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0980040ce58a2800aa0dc9d3a978b1d1"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=17c99c2bc41ab7ef8d9dd8cc88424a1c
+      "
     ></script>
     <title>봐주개냥</title>
   </head>
