--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <title>봐주개냥</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
