[Modify] API Key 삭제
- API Key 환경변수 값으로 수정

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     />
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=17c99c2bc41ab7ef8d9dd8cc88424a1c
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_JS_KEY%
       "
     ></script>
     <title>봐주개냥</title>
